@@ -195,7 +195,7 @@
         </item>
         <item>
             <key> <string>type_class</string> </key>
-            <value> <string>XMLObject</string> </value>
+            <value> <string>Predicate</string> </value>
         </item>
         <item>
             <key> <string>type_interface</string> </key>
