@@ -4,6 +4,7 @@ Gadget Type | gadget_view
 Gadget Type | view
 Gadget | preferences
 Gadget | view
+Knowledge Box | predicate
 Knowledge Box | preferences
 Knowledge Box | view
 Knowledge Pad Module | view
