@@ -1,3 +1,6 @@
+2012-12-10 Kazuhiko
+* support predicate in Knowled Box for more flexibility.
+
 2012-06-25 Kazuhiko
 * add knowledge pad's group in gadget title div class.
 
